@@ -1,5 +1,15 @@
 2010-01-29  Matthew Mundell <matthew.mundell@intevation.de>
 
+	* src/html/src/omp.xsl (get_status_response): Correct substring args.
+	(html-create-lsc-credential-form): Add empty values to some empty inputs.
+
+	* src/html/src/gsad.xsl (html-gsa-logo): Add image title.
+
+	* src/gsad_oap.c (save_user_oap): Correct comment.
+	(get_feed_oap): Correct message texts.
+
+2010-01-29  Matthew Mundell <matthew.mundell@intevation.de>
+
 	* src/html/src/oap.xsl (describe_feed_response): Check for failure.
 	(html-feed-form): Add details if sync in progress.  Correct button
 	greying test.
